--- a/cvnext5.html
+++ b/cvnext5.html
@@ -133,7 +133,7 @@
     
     
     <div class="container">
-        <h1>Kazim</h1>
+        <h1>Kazim full stack developer</h1>
         <div class="contact">
             <p><i class="bi bi-telephone-fill"></i> <strong>Phone:</strong> <a href="tel:+917870449674">+91 7870449674</a></p>
             <p><i class="bi bi-envelope-at-fill"></i> <strong>Email:</strong> <a href="mailto:mdkazim0669@gmail.com">mdkazim0669@gmail.com</a></p>
