--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <p class="contact"><i class="bi bi-linkedin"></i>&nbsp;<strong>LinkedIn:</strong> <a
                 href="https://www.linkedin.com/in/kazim0669" target="_blank">linkedin.com/in/kazim0669</a></p>
         <p class="contact"><i class="bi bi-github"></i>&nbsp;<strong>github:</strong> <a
-                href="https://github.com/kazim0669/kazim-github" target="_blank">github.com/kazim0669/kazim-github</a>
+                href="https://github.com/kazim0669" target="_blank">github.com/kazim0669</a>
         </p>
         <div class="section">
             <h2>Professional Summary</h2>
