--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         .skills {
             list-style: none;
-            padding: 40px;
+/*             padding: 40px; */
         }
 
         .skills li {
@@ -92,7 +92,7 @@
         }
 
         .project {
-            padding: 40px;
+/*             padding: 40px; */
         }
 
         td .progress-bar {
